---------------------------------------------------------------------------------------------------
Version: 1.3.17
Date: ????

  Bugfixes:
    - Remove duplicated plastic bar milestone from Sea Block presets.

  Locale:
    - Ukrainian translation thanks to Met en Bouldry.
    - Chinese translation update thanks to luaotix.
    - German translation update thanks to knniDE.

---------------------------------------------------------------------------------------------------
Version: 1.3.16
Date: 2023-01-31

  Bugfixes:
    - Fix crash when reaching a milestone near the end of the set, when several milestones are checked per tick.

  Locale:
    - Russian translation update thanks to Shadow_Man.

---------------------------------------------------------------------------------------------------
Version: 1.3.15
Date: 2023-01-28

  Bugfixes:
    - Fix crash caused by milestones for invalid items not being removed if they are in the last position of the set.
    - Fix Bob's Modules preset addon being loaded when using Bob's Enemies instead.

---------------------------------------------------------------------------------------------------
Version: 1.3.14
Date: 2023-01-27

  Changes:
    - Tweaks to IR3 preset (Added Heavy picket, graphene, and electrum. Replaced special projects pack end goal count with a technology milestone, since productivity in labs can actually make the required number of packs variable).
    - Tweaks to PyMods presets (Added Dig-o-saurus, Thikat, Caravan, and Oculus)
    - Large changes to the Sea Block presets with input from the Sea Block community.
    - Add preset addon for the "Cat" mod.
    - As usual you will need to refresh your milestone set yourself if you are already in the middle of a playthrough (Settings -> Switch to Empty -> Switch to the preset you want -> Confirm).

  Optimizations: