@@ -53,22 +53,26 @@ local function is_preset_mods_enabled(preset)
     return true
 end
 
+local function add_remote_presets_to_preset_table()
+    -- See presets.lua to find out how to use this reverse remote interface to add your own preset.
+    for interface_name, functions in pairs(remote.interfaces) do
+        if functions["milestones_presets"] then
+            local remote_milestones_presets = remote.call(interface_name, "milestones_presets")
+            if validate_milestone_presets(interface_name, remote_milestones_presets, presets) then
+                ---@cast remote_milestones_presets table
+                for remote_preset_name, remote_preset in pairs(remote_milestones_presets) do
+                    presets[remote_preset_name] = remote_preset
+                end
+            end
+        end
+    end
+end
+
 function load_presets()
     log("Loading presets")
     global.valid_preset_names = {"Empty"}
 
-    -- See presets.lua to find out how to use this reverse remote interface to add your own preset.
-    for interface_name, functions in pairs(remote.interfaces) do
-        if functions["milestones_presets"] then
-          local remote_milestones_presets = remote.call(interface_name, "milestones_presets")
-          if validate_milestone_presets(interface_name, remote_milestones_presets, presets) then
-            ---@cast remote_milestones_presets table
-            for remote_preset_name, remote_preset in pairs(remote_milestones_presets) do
-                presets[remote_preset_name] = remote_preset
-            end
-          end
-        end
-      end
+    add_remote_presets_to_preset_table()
 
     local max_nb_mods_matched = -1
     for preset_name, preset in pairs(presets) do
@@ -129,6 +133,9 @@ function reload_presets()
     log("Reloading presets")
     local added_presets = {}
     local new_valid_preset_names = {"Empty"}
+
+    add_remote_presets_to_preset_table()
+
     for preset_name, preset in pairs(presets) do
         if is_preset_mods_enabled(preset) then
             table.insert(new_valid_preset_names, preset_name)
