@@ -3,6 +3,7 @@ Version: 1.3.17
 Date: ????
 
   Bugfixes:
+    - Fix remote presets disappearing from the selectable preset list when changing mods in the middle of a game (on configuration changed).
     - Remove duplicated plastic bar milestone from Sea Block presets.
 
   Locale:
